Bump version to 2026.1.0 and switch to SW 2025.12.0
In the form, the editing of the table widget still does not work (because of an old API version).